[package]
name = "treehouse"
version = "0.1.0"
edition = "2021"
description = "Ask the user to type their name and print a a personzalized greeting."
readme = "README.md"
repository = "https://github.com/michaelvdnest/treehouse"
license = "MIT"
keywords = ["sample"]
categories = ["sample"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
